assets/src/scss/3-global/_highlight.scss
// Yii 1.1 guide code block highlights

.hl-default {
  color: Black;
}
.hl-code {
  color: Gray;
}
.hl-brackets {
  color: Olive;
}
.hl-comment {
  color: #808080;
  font-style: italic;
}
.hl-quotes {
  color: red;
}
.hl-string {
  color: Red;
}
.hl-identifier {
  color: green;
}
.hl-builtin {
  color: Teal;
}
.hl-reserved {
  color: black;
  font-weight: bold;
}
.hl-inlinedoc {
  color: Blue;
}
.hl-var {
  color: blue;
}
.hl-url {
  color: Blue;
}
.hl-special {
  color: Navy;
}
.hl-number {
  color: Maroon;
}
.hl-inlinetags {
  color: Blue;
}
.hl-main {
  font-family: $font-family-monospace;
  font-weight: normal;
  @include rem(font-size, $font-size-codeblocks);
}
ol.hl-main pre {
  margin: 0;
  padding: 0;
}
.hl-gutter {
  background-color: #999999;
  color: White
}
.hl-table {
  font-family: $font-family-monospace;
  @include rem(font-size, $font-size-codeblocks);
  border: solid 1px #505050;
}

.source .copycode
{
  text-align: right;
  float: right;
}

.source .copycode a
{
  cursor: pointer;
  color: blue;
}

.source .copycode_hover a
{
  color: red;
}

.hljs {
  @include rem(padding-left, 40px);
  font-family: 'Fira Mono', monospace;
  color: #000;
  background-color: #F2F9FA;
  border-left: 5px solid #EBF1F2;
  overflow: auto;
  word-wrap: normal;
  white-space: pre;
  @media (max-width: 767px)  {
    @include rem(padding-left, 10px);
  }

  .hljs-comment {
    font-style: normal;
  }
}
code {
  background-color: #F2F9FA;
  color: inherit;
}

